[package]
name = "rom_experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
simple_logger = { version="2.1.0", features=["colors"]}
clap = { version = "3.1.12", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
error-chain = "0.12.4"
rand = "0.8.5"
rayon = "1.5.2"
itertools = "0.10.3"
walkdir = "2.3.2"